src/tests/data/SemanticErrors/NestedScope.c

#include <stdio.h>

int main()
{
    {
        int b;
    }
    b = 0;  // ERROR

	return 0;
}